Use List.of() in DuplicateEntry
Rather than using Collections.emptyList(), use List.of().

Change-Id: I46d88f5758642639121b68d26cacd3d700a64f8b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>